--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
+    "start": "ts-node src/index.ts",
+    "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -21,10 +23,13 @@
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.10.3",
+    "dotenv": "^10.0.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^14.0.1",
     "express": "^4.17.1",
+    "mongodb": "^4.1.3",
     "mongoose": "^6.0.10",
+    "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   }
 }
