--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.10",
+    "node-media-server": "^2.3.8",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   }
