--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.32.0",
@@ -23,6 +24,9 @@
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.10.3",
+    "@types/swagger-ui": "^3.52.0",
+    "@types/swagger-ui-dist": "^3.30.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
@@ -35,6 +39,9 @@
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.10",
     "node-media-server": "^2.3.8",
+    "swagger-ui": "^4.1.2",
+    "swagger-ui-dist": "^4.1.2",
+    "swagger-ui-express": "^4.2.0",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   }
